Integrate playwright pdf generator and remove form service
