# api/src/main/kotlin/app/nextrole/api/controller/pdf/PdfController.kt
@@ -1,0 +1,26 @@
+package app.nextrole.api.controller.pdf
+
+import app.nextrole.api.*
+import app.nextrole.api.service.pdf.PdfService
+import org.springframework.core.io.Resource
+import org.springframework.http.ResponseEntity
+import org.springframework.stereotype.Controller
+
+
+/**
+ * @author Biz Melesse
+ * created on 3/17/24
+ */
+@Controller
+class PdfController(
+    val pdfService: PdfService,
+): PdfApi {
+
+    override fun convertToPdf(pdfGenerateRequest: PdfGenerateRequest): ResponseEntity<Resource> {
+        return super.convertToPdf(pdfGenerateRequest)
+    }
+
+    override fun saveStyle(saveStyleRequest: SaveStyleRequest): ResponseEntity<GenericResponse> {
+        return super.saveStyle(saveStyleRequest)
+    }
+}
